add_subdirectory( cell-mappings )
add_subdirectory( configurations )
add_subdirectory( datastructures )
add_subdirectory( filtering )
add_subdirectory( interface )
add_subdirectory( paralleltopology )
add_subdirectory( python-binding )
add_subdirectory( sendrecv )
add_subdirectory( services )
add_subdirectory( solvers )
add_subdirectory( transferstrategies )
